# c2pa-thumbs

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
