[package]
name = "c2pa-thumbs"
description = "Fetch all thumbs from file with c2pa"
readme = "README.md"
repository = "https://github.com/markos-szczecin/c2pa-thumbs.git"
keywords = ["c2pa", "thumbnail"]
license = "MIT"
version = "0.5.6"
edition = "2021"

[dependencies]
c2pa = {version="^0.48.2", features=["file_io", "fetch_remote_manifests", "v1_api"]}
clap = { version = "4.5", features = ["derive"] }
base64 = "^0.22.0"
serde = { version = "^1.0.198", features = ["derive"] }
serde_json = "^1.0.116"
